# hex

./: .gitignore  .travis.yml  BUILD.bazel  LICENSE  Makefile  README.md  WORKSPACE  area.go  area_test.go  bazel-hexcoord  curve.go  curve_test.go  doc.go  go.mod  go.sum  grid.go  grid_test.go  hex.go  hexFractional.go  hexFractional_test.go  hex_test.go  hexcoord_test.go  path.go  path_test.go  smoothPath.go  sorter.go
area/: area.go  areabuilder.go  bounds.go  builder.go  csg_test.go  doc.go  primitives.go
csg/: area.go  areabuilder.go  areabuilderbinary.go  areabuilderunary.go  bounds.go  builder.go  csg.go  csg_test.go  doc.go  primitives.go
curve/: BUILD.bazel  curve.go  curve_test.go  doc.go  smoothPath.go  smoothPath_test.go
draw/: .gitignore  BUILD.bazel  doc.go  draw.go  draw_test.go
example/: BUILD.bazel  doc.go  drawPath_test.go
examples/draw/: draw.go  draw_test.go  go.mod  go.sum  logo.json  main.go  readme.md
examples/drawhx/: draw_test.go  go.mod  go.sum  logo.json  main.go  readme.md
examples/mesh/: basetransform.go  doc.go  encode_test.go  encodedetailed.go  encodeoptimized.go  go.mod  go.sum  simplexnoise.go  transformer.go
internal/: floathelp.go  matrix.go  simplexnoise.go
internal/floathelp/: BUILD.bazel  floadhelp.go  floathelp.go
mesh/: basetransform.go  detailedencode.go  encode.go  encode_test.go  encodedetailed.go  encodeoptimized.go  transformer.go  vec.go
path/: BUILD.bazel  doc.go  path.go  path_test.go  pather.go  pq.go
pos/: BUILD.bazel  area.go  area_test.go  doc.go  hex.go  hexFractional.go  hexFractional_test.go  hex_test.go  pq.go  sorter.go
