package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# A Gazelle executable for auto-generating Go BUILD definitions
gazelle(
    name = "gazelle",
    prefix = "github.com/erinpentecost/hexcoord",
)

# Import project dependencies.
# This is done automatically by gazelle.

go_library(
    name = "go_default_library",
    srcs = ["doc.go"],
    importpath = "github.com/erinpentecost/hexcoord",
    visibility = ["//visibility:public"],
    deps = [
        "//curve:go_default_library",
        "//path:go_default_library",
        "//pos:go_default_library",
    ],
)
