load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "curve.go",
        "doc.go",
        "smoothPath.go",
    ],
    importpath = "github.com/erinpentecost/hexcoord/curve",
    visibility = ["//visibility:public"],
    deps = ["//pos:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "curve_test.go",
        "smoothPath_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pos:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)
