load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["draw.go"],
    importpath = "github.com/erinpentecost/hexcoord/draw",
    visibility = ["//visibility:public"],
    deps = [
        "//pos:go_default_library",
        "//vendor/golang.org/x/image/font:go_default_library",
        "//vendor/golang.org/x/image/font/basicfont:go_default_library",
        "//vendor/golang.org/x/image/math/fixed:go_default_library",
    ],
)
