load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "draw.go",
    ],
    importpath = "github.com/erinpentecost/hexcoord/draw",
    visibility = ["//visibility:public"],
    deps = [
        "//pos:go_default_library",
        "//vendor/github.com/lucasb-eyer/go-colorful:go_default_library",
        "//vendor/golang.org/x/image/font:go_default_library",
        "//vendor/golang.org/x/image/font/basicfont:go_default_library",
        "//vendor/golang.org/x/image/math/fixed:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["draw_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pos:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)
