load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_test(
    name = "go_default_test",
    srcs = ["drawPath_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//curve:go_default_library",
        "//draw:go_default_library",
        "//pos:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    srcs = ["doc.go"],
    importpath = "github.com/erinpentecost/hexcoord/example",
    visibility = ["//visibility:public"],
)
