load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "path.go",
    ],
    importpath = "github.com/erinpentecost/hexcoord/path",
    visibility = ["//visibility:public"],
    deps = ["//pos:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["path_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pos:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)
