load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "area.go",
        "doc.go",
        "hex.go",
        "hexFractional.go",
    ],
    importpath = "github.com/erinpentecost/hexcoord/pos",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/erinpentecost/fltcmp:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "area_test.go",
        "hexFractional_test.go",
        "hex_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["//vendor/github.com/stretchr/testify/assert:go_default_library"],
)
